--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 This is my website
+
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
+    </ul>
 </body>
 </html>
